Add styling to images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
             <div class="Red" id="players">Red</div>
             <span class="red-score" id="score">0</span>
         </div>
+    </div>
 
+    <div class="rock-paper-scissors">
+            <img class="rock" id="options" src="images/rock.png" alt="Rock">
+            <img class="paper" id="options" src="images/paper.png" alt="Paper">
+            <img class="scissors" id="options" src="images/scissors.png" alt="Scissors">
     </div>
 </body>
 </html>
