--- a/game.html
+++ b/game.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="game.css">
+    <script src="game.js" defer></script>
 </head>
 <body>
     <header>
@@ -13,20 +14,21 @@
     </header>
     <div class="match-score">
         <div class="user-section">
-            <div class="User" id="players">You</div>
+            <div class="user" id="players"></div>
             <span class="user-score" id="score">0</span>
         </div>
 
         <div class="red-section">
-            <div class="Red" id="players">Red</div>
+            <div class="red" id="players">Red</div>
             <span class="red-score" id="score">0</span>
         </div>
     </div>
 
     <div class="rock-paper-scissors">
-            <img class="rock" id="options" src="images/rock.png" alt="Rock">
-            <img class="paper" id="options" src="images/paper.png" alt="Paper">
-            <img class="scissors" id="options" src="images/scissors.png" alt="Scissors">
+        <h4>Pick you choice</h4>
+        <img class="rock" id="options" src="images/rock.png" alt="Rock">
+        <img class="paper" id="options" src="images/paper.png" alt="Paper">
+        <img class="scissors" id="options" src="images/scissors.png" alt="Scissors">
     </div>
 </body>
 </html>
