--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
 <body>
     <form id="submission-form" action="game.html" method="post">
         <h1>Enter Your Username</h1>
-        <input type="text" name="username" id="username" placeholder="username">
+        <input type="text" name="username" id="username" placeholder="username" autocomplete="off">
         <div id="error">
             <p><span>&#9888</span> You must enter your username before you play the game!</p>
         </div>
