--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction</title>
-    <link rel="stylesheet" href="menuStyles.css">
+    <link rel="stylesheet" href="menu.css">
     <script src="menu.js" defer></script>
 </head>
 <body>
