Fix form POST method

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="index.js" defer></script>
 </head>
 <body>
-    <form id="submission-form" action="game.html" method="post">
+    <form id="submission-form" action="game.html">
         <h1>Enter Your Username</h1>
         <input type="text" name="username" id="username" placeholder="username" autocomplete="off">
         <div id="error">
